--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1270,11 +1270,13 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Completed"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM Approval"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor Management Team"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Procurement Team"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Draft"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Expired"] ,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"]/* related to etender, do not replace or remove*/,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Procurement Team"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Engineer"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Welcome Letter Upload"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Approval Awaiting from NOC Lead "],
@@ -1300,12 +1302,14 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="FTTX Desgin 
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Completed"] >span.runtime-list-item,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting RM Approval"] >span.runtime-list-item,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Procurement Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Vendor Management Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Document Signature"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Closed"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Draft"] > span, 
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Expired"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Procurement Team"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Vendor Managament Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending reviewer"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending for E-Sign"] >span,
@@ -1330,6 +1334,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Expired"] > 
 }
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Higher Management Team"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Vendor Managament Team"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending with Procurement Team"] > span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending reviewer"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending for E-Sign"] >span,
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pending for user to missing data"] >span,
@@ -1367,6 +1372,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Waiting Docu
 	padding: 0.6rem 1.2rem!important;
 }
 html:not(.designer) .theme-entry .grid-content-cell-wrapper[title="Returned to Vendor"] >span,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Returned to Procurement Team"]>span,
 html:not(.designer) .theme-entry .grid-content-cell-wrapper[title="Returned to Vendor Management Team"] >span,
 html:not(.designer)  [name*="OBB_statusContainer"] span[title="Returned to Vendor"],
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Preparing document"] span{
