--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1348,7 +1348,7 @@ html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Floated"] sp
 }
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pre Clarification"] span{
 	color:#17A2B8;
-	background-color#ffffff;
+	background-color:#ffffff;
 }
 html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title="Pre Clarification"] span{
 	color:#6F42C1;
