--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -236,7 +236,7 @@ html:not(.designer) .theme-entry .input-control.select-box.read-only .input-cont
 html:not(.designer) .theme-entry [name="registerAsVendor"]{
 	display:flex;
 	flex-direction:column;
-	background:url("https://frontenduiux.github.io/OBB_ETenders/Images/Banner.png");
+	background:url("https://frontenduiux.github.io/OBB_ETenders/Images/banner1.png");
 	background-repeat:no-repeat;
 	height: 15rem;
 	margin: 1rem auto 2rem;
@@ -258,6 +258,10 @@ html:not(.designer) .ajaxLoader.modal-element{
 html:not(.designer) [name="registerAsVendor"] [name*="cardTitle"]{
 	font-size:2.5rem;
 	color:#000000;
+	color: white;
+}
+html:not(.designer) [name="registerAsVendor"] [name*="cardText"]{
+	color:white;
 }
 html:not(.designer) [name="registerAsVendor"] [name*="buttonText"] {
  display:flex;
