--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,6 +9,9 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+.theme-entry .input-control.select-box.picker-input[data-maxrows="1"] div.editable-area{
+	overflow: auto!important;
+}
 html:not(.designer) .theme-entry .message-box-content.warning:before{
 	background-image: url("https://frontenduiux.github.io/OBB_Services/Images/Warning.svg");
 	background-size: contain;
